--- a/app/src/main/res/layout/activity_myteam.xml
+++ b/app/src/main/res/layout/activity_myteam.xml
@@ -19,6 +19,7 @@
 
         <ImageView
             android:padding="@dimen/padding_default"
+            android:layout_margin="@dimen/default_spacing"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/imgTeam" />
